@@ -17,7 +17,10 @@ $Id$
 
 import unittest
 from Testing import ZopeTestCase
-from Products.Five.schema import Zope2VocabularyRegistry
+try:
+    from Zope2.App.schema import Zope2VocabularyRegistry
+except ImportError:  # Zope2 <= 2.12
+    from Products.Five.schema import Zope2VocabularyRegistry
 
 from Products.CMFCalendar.testing import FunctionalLayer
 
