@@ -4,6 +4,8 @@ Products.CMFCalendar Changelog
 2.2.1-beta (unreleased)
 -----------------------
 
+- Fixed ViewPageTemplateFile import to use the correct version from Five.
+
 - Deal with deprecation warnings for Zope 2.13.
 
 
